nova/k8s/dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: binarytradeweb
  namespace: dev-trade
spec:
  replicas: 2
  selector:
    matchLabels:
      app: binarytradeweb
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: binarytradeweb
      namespace: dev-trade
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: binarytradeweb
          image: $ECR_REGISTRY/binarytradeweb/binarytradeweb:$IMAGE_TAG
          ports:
            - containerPort: 80
              name: binarytradeweb
          resources:
            requests:
              cpu: 2000m
              memory: 500Mi
            limits:
              cpu: 2000m
              memory: 4000Mi
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 60
            timeoutSeconds: 5
            failureThreshold: 12
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 60
            timeoutSeconds: 5
            failureThreshold: 12
          volumeMounts:
            - mountPath: /logs/
              name: logs
      volumes:
        - name: logs
          hostPath:
            path: /data/logs/
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: svc-binarytradeweb
  namespace: dev-trade
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: binarytradeweb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devbinary-web-ingress
  namespace: dev-trade
  annotations:
    #    ingress.kubernetes.io/ssl-redirect: "False"
    #    acme.cert-manager.io/http01-edit-in-place: 'true'
    #    cert-manager.io/issuer: letsencrypt-dns01
    # cert-manager.io/cluster-issuer: letsencrypt-dns01
    # certmanager.k8s.io/cluster-issuer: letsencrypt-dns01
    #    kubernetes.io/tls-acme: 'true'
    #    cert-manager.io/issue-temporary-certificate: 'true'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Access-Control-Allow-Origin *;
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  tls:
    - secretName: binarytradeweb-crt
      hosts:
        - devwww.exchange2currency.com
  rules:
    - host: devwww.exchange2currency.com
      http:
        paths:
          - path: /
            pathType: Prefix #值类型说明参考官方文档，有Exact和Prefix两种
            backend:
              service:
                name: svc-binarytradeweb
                port:
                  number: 80
