nova/k8s/prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: binarytradeweb
  namespace: trade
spec:
  replicas: 3
  selector:
    matchLabels:
      app: binarytradeweb
  template:
    metadata:
      labels:
        app: binarytradeweb
      namespace: trade
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: binarytradeweb
        image: $ECR_REGISTRY/binarytradeweb/binarytradeweb:$IMAGE_TAG
        ports:
        - containerPort: 80
          name: binarytradeweb
        resources:
          requests:
            cpu: 200m
            memory: 500Mi
          limits:
            cpu: 2000m
            memory: 4000Mi
        livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 60
            timeoutSeconds: 5
            failureThreshold: 12
        readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 60
            timeoutSeconds: 5
            failureThreshold: 12
        volumeMounts:
        - mountPath: /logs/
          name: logs
      volumes:
      - name: logs
        hostPath:
          path: /data/logs/
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: svc-binarytradeweb
  namespace: trade
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: binarytradeweb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testbinary-web-ingress
  namespace: trade
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
       add_header Access-Control-Allow-Origin *;
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - secretName: binarytradeweb-crt
    hosts:
    - www.exchange2currency.com
  rules:
  - host: www.exchange2currency.com
    http:
      paths:
      - path: /
        pathType: Prefix   #值类型说明参考官方文档，有Exact和Prefix两种
        backend:
          service:
            name: svc-binarytradeweb
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: binary-web2-ingress
  namespace: trade
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
       add_header Access-Control-Allow-Origin *;
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - secretName: binarytradeweb2-crt
    hosts:
    - www2.exchange2currency.com
  rules:
  - host: www2.exchange2currency.com
    http:
      paths:
      - path: /
        pathType: Prefix   #值类型说明参考官方文档，有Exact和Prefix两种
        backend:
          service:
            name: svc-binarytradeweb
            port:
              number: 80
