nova/k8s/test1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: binarytradeweb-test1
  namespace: test-trade
spec:
  replicas: 2
  selector:
    matchLabels:
      app: binarytradeweb-test1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: binarytradeweb-test1
      namespace: test-trade
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: binarytradeweb-test1
          image: $ECR_REGISTRY/test1_binarytradeweb/binarytradeweb:$IMAGE_TAG
          ports:
            - containerPort: 80
              name: web-test1
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 2000m
              memory: 4000Mi
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 60
            timeoutSeconds: 5
            failureThreshold: 12
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 60
            timeoutSeconds: 5
            failureThreshold: 12
          volumeMounts:
            - mountPath: /logs/
              name: logs
      volumes:
        - name: logs
          hostPath:
            path: /data/logs/
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: svc-binarytradeweb-test1
  namespace: test-trade
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: binarytradeweb-test1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test1binary-web-ingress
  namespace: test-trade
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Access-Control-Allow-Origin *;
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  tls:
    - secretName: binarytradeweb-test1-crt
      hosts:
        - test1www.exchange2currency.com
  rules:
    - host: test1www.exchange2currency.com
      http:
        paths:
          - path: /
            pathType: Prefix #值类型说明参考官方文档，有Exact和Prefix两种
            backend:
              service:
                name: svc-binarytradeweb-test1
                port:
                  number: 80
